--- a/app/views/reservations/complete.html.erb
+++ b/app/views/reservations/complete.html.erb
@@ -5,6 +5,6 @@
 <%= @note.provider.name %>さんから連絡が来るのを待ちましょう！
 
 
-<%= link_to "予約中のサービスを確認",  list_reservations_path, class: "shadow_btn"%>
+<%= link_to "予約中のサービスを確認",  history_users_path, class: "shadow_btn"%>
 
 </div>
