--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
 <%= render 'users/header' %>
 <%= render 'home/header/dashboardhead' %>
 <div class="mypage-all_wrapper">
+
   <h1><%= current_user.name %>さんのページ  </h1>
 	<div class="notification_user">
 	 <div class="notification_header">
@@ -15,6 +16,8 @@
 		 <% end %>
        </div>
 
+
+
 	 <div class="notification_header">
 		<h2>予約中サービス</h2>
 	 </div>
@@ -22,7 +25,7 @@
          <% if current_user.reservations.blank? %>
           <p>予約中のサービスはありません。</p>
          <% else %>
-			<a href='/users/history'><p>現在 <%= current_user.reservations.count %>件の予約をしています。</a></p>
+			<a href='/reservations/list'><p>現在 <%= current_user.reservations.count %>件の予約をしています。</a></p>
 		 <% end %>
 		</div>
 	 </div>
