--- a/app/views/providers/_header.html
+++ b/app/views/providers/_header.html
@@ -1,4 +1,4 @@
-    <% if provider_signed_in? %> 
+     <% if provider_signed_in? %> 
           <div class="up-var">
               <div class="upper-menu">
                 <div class="wrapper" >
@@ -56,7 +56,7 @@
 
 
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script>
     (function($) {
         $(function() {
