--- a/app/views/notes/housing.html.erb
+++ b/app/views/notes/housing.html.erb
@@ -1,4 +1,5 @@
 
+<%= render 'home/header/dashboardhead' %>
 <div class="genre">
   <div class="bootstrap1">
     <ol class="breadcrumb">
@@ -14,8 +15,8 @@
   <div class="other-jobs-menu">
 
 
-   <h2>住まい</h2>
-   <ul>
+   <h4>住まいカテゴリ</h4>
+
      <li>不用品回収</li>
      <li>リモデル</li>
      <li>畳張替え</li>
@@ -31,27 +32,30 @@
      <li>水回り</li>
      <li>庭お手入れ</li>
      <li>その他</li>
-   </ul>
+  
    <br><br>
    <h2>ご利用にあたって</h2>
-   <ul>
+
      <li>ご利用の流れ</li>
      <li>よくある質問</li>
-   </ul>
+
  </div>
 </div>
 
 
-
-
 <div class="services_right_wrapper">
 
-  <div class="show_providers clearfix">
-    <p><%= @notes.count %>件のサービスが見つかりました</p>
-    <ul>
-     <% @notes.each do |note| %>
-     <div class="provider_job ">
+<p><%= @notes.count %>件のサービスが見つかりました</p>
+      <div class="show_providers">
 
+  
+
+ 
+     <% @notes.each do |note| %>
+
+     <div class="provider_job ">
+ <% note.note_revisions.each do |note_revision| %>
+      <div class="title"><h2> <%= link_to note_revision.title, note_path(note) %></h2>
       <% note.note_images.each do |note_images| %>
       <% if note_images.image1.present? %>
       <%= link_to image_tag( note_images.image1_url, { :class => "provider_service_image"}), note_path(note) %>
@@ -60,14 +64,22 @@
       <% end %>
      <% end %>
 
-      <% note.note_revisions.each do |note_revision| %>
-      <div class="title"><h2> <%= link_to note_revision.title, note_path(note) %></h2>
-       <div class="service-price"><h3> ¥<%= note_revision.price %></h3> </div>
+
+    <div class="service_catchcopy_top"> 
+     <p><%= note_revision.catchcopy.truncate(37, omission: '...' )%></p>
+    </div>
+
+     <div class="store_name_left">
+     <p><%= link_to note.provider.name,profile_note_path(note) %></p>
+     </div>
+       <div class="service-price"><h3> <%= note_revision.price %>円<span>(税込)</span>〜</h3> </div>
        <% end %>
      </div>
    </div>
    <% end %>
- </ul>
+
+
+
 
  <div class="bootstrap">
    <div class="list-number-2 clearfix">
@@ -75,9 +87,9 @@
    </div>
  </div>
 
-
 </div>
 
 </div>
 </div>
+
 
